--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@
       left: 0;
       bottom: 0;
       width: 100%;
+     height:20px;
       background-color: #2c3e50;
       color: white;
       text-align: center;
