--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@
       background: white;
       border-radius: 6px;
       overflow: hidden;
+     padding-bottom:30px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
     }
 
@@ -113,7 +114,7 @@
         display: block;
         overflow-x: auto;
         white-space: nowrap;
-       padding-bottm:20px;
+       padding-bottom:30px;
       }
 
       input, select, button {
